Ensure django 2.2 is installed for the django-22 tox config entry

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands =
     pytest --cov=rest_framework_tus
     codecov -e TOXENV
 deps =
-    django-22: Django>=2.2.11
+    django-22: Django~=2.2.11
     -r{toxinidir}/requirements_test.txt
 basepython =
     py37: python3.7
