--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,15 @@
 [tox]
 envlist =
+    {py35}-django-22
+    {py36}-django-22
     {py37}-django-22
+    {py38}-django-22
+    {py39}-django-22
+    {py36}-django-32
+    {py37}-django-32
+    {py38}-django-32
+    {py39}-django-32
+    {py310}-django-32
 
 [testenv]
 setenv =
@@ -11,6 +20,12 @@ commands =
     codecov -e TOXENV
 deps =
     django-22: Django~=2.2.11
+    django-32: Django~=3.2.0
     -r{toxinidir}/requirements_test.txt
 basepython =
+    py35: python3.5
+    py36: python3.6
     py37: python3.7
+    py38: python3.8
+    py39: python3.9
+    py310: python3.10
