Use slim images

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,37 +3,37 @@ pipelines:
     - parallel:
         - step:
             name: Python 3.5
-            image: python:3.5
+            image: python:3.5-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
         - step:
             name: Python 3.6
-            image: python:3.6
+            image: python:3.6-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
         - step:
             name: Python 3.7
-            image: python:3.7
+            image: python:3.7-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
         - step:
             name: Python 3.8
-            image: python:3.8
+            image: python:3.8-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
         - step:
             name: Python 3.9
-            image: python:3.9
+            image: python:3.9-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
         - step:
             name: Python 3.10
-            image: python:3.10
+            image: python:3.10-slim
             script:
               - pip install -U tox
               - tox --skip-missing-interpreters true
