--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,23 @@
 [tox]
 envlist =
-    {py36}-django-22
-    {py37}-django-22
-    {py38}-django-22
-    {py39}-django-22
-    {py36}-django-32
-    {py37}-django-32
     {py38}-django-32
     {py39}-django-32
     {py310}-django-32
+    {py38}-django-42
+    {py39}-django-42
+    {py310}-django-42
 
 [testenv]
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
-passenv = TOXENV CI TRAVIS TRAVIS_*
+passenv = TOXENV, CI, TRAVIS, TRAVIS_*
 commands =
     pytest --cov=rest_framework_tus
 deps =
-    django-22: Django~=2.2.11
     django-32: Django~=3.2.0
+    django-42: Django~=4.2.0
     -r{toxinidir}/requirements_test.txt
 basepython =
-    py36: python3.6
-    py37: python3.7
     py38: python3.8
     py39: python3.9
     py310: python3.10
