--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,20 @@
-# http://editorconfig.org
+# editorconfig.org
 root = true
 
 [*]
 indent_style = space
-indent_size = 4
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
+indent_size = 2
 insert_final_newline = true
+trim_trailing_whitespace = true
+charset = utf-8
+end_of_line = lf
+
+[*.py]
+max_line_length = 80
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
