--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,8 @@ jobs:
       max-parallel: 2
       fail-fast: true
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
-        django-version: [4.2, 3.2]
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+        django-version: ['4.2', '3.2']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -38,6 +38,6 @@ jobs:
             requirements_local.txt
             setup.py
       - run: make install-pipeline
-      - run: pip install Django~=${{ django-version }}
+      - run: pip install Django~=${{ matrix.django-version }}
       - run: make migrationtest
       - run: make coveragetest
